# MutantScope

./: .gitignore  ARCHITECTURE.md  Readme.md
client/: .gitignore  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/components/: Drawer.tsx  LeftPanel.tsx  Viewer.tsx
notebooks/: SERAPH.ipynb
server/: .gitignore  main.py  pyproject.toml
server/models/: seraph.py
server/services/: alphafold.py  esmfold.py  gemini.py
